--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainAct"/>
-
         <activity android:name=".activity.ArticleListAct" />
         <activity android:name=".activity.ArticleDetailAct" />
         <activity
@@ -22,6 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.CheckListAct"
+            android:label="@string/title_activity_check_list"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.SearchAct"></activity>
     </application>
 
 </manifest>
