--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
             android:name=".activity.CheckListAct"
             android:label="@string/title_activity_check_list"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activity.SearchAct"></activity>
+        <activity android:name=".activity.SearchAct" />
+        <activity android:name=".activity.DrawerNotificationAct" />
+        <activity android:name=".activity.BookmarkAct"></activity>
     </application>
 
 </manifest>
