개별 체크리스트 불어오는 부분 수정해야함 (디비 메소드 여러개 만들지 말 것)
의심되는 에러 : 처음 실행 시 디비 생성 때 나는 오류

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         <activity android:name=".activity.DrawerNotificationAct" />
         <activity android:name=".activity.BookmarkAct" />
         <activity android:name=".activity.ImportToCheckListAct" />
-        <activity android:name=".activity.AddCheckListAct"></activity>
+        <activity android:name=".activity.AddCheckListAct"
+            android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name=".activity.ArticleDetailCheckListImportAct" />
     </application>
 
 </manifest>
